--- a/SportsSideKick/app/src/main/res/values-pt/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pt/strings.xml
@@ -50,7 +50,7 @@
     <string name="password_reset">Apagar password</string>
     <string name="reset_check_email">Por favor verifique o seu e-mail para consultar as opções de apagar.</string>
     <string name="email_enter_valid">Por favor introduza um endereço de e-mail válido.</string>
-    <string name="sign_up_text">Ao registares-te concordas com os termos de utilização da SportsSidekick´s\n<font color="#FFFFFF">Termos e condições de uso</font> and <font color="#FFFFFF">Política de privacidade.</font></string>
+    <string name="sign_up_text">Ao registares-te concordas com os termos de utilização da Fanchat´s\n<font color="#FFFFFF">Termos e condições de uso</font> and <font color="#FFFFFF">Política de privacidade.</font></string>
     <string name="required_email">Têm que escrever o seu e-mail</string>
     <string name="required_password">Tens de inserir a password</string>
     <string name="required_first_name">Têm que escrever o primeiro nome</string>
