replace nonet library with system check

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="rumours">Rumours</string>
     <string name="social">Social</string>
     <string name="stats">Stats</string>
-    <string name="shop">Shop</string>
+    <string name="shop">Official Store</string>
     <string name="chat">Chat</string>
     <string name="video_chat">Video Chat</string>
     <string name="radio">Club Radio</string>
