--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -184,7 +184,7 @@
     <string name="multiple_users_are_typing">Multiple users are typing…</string>
     <string name="alerts_on">Alerts-ON</string>
     <string name="alerts_off">Alerts-OFF</string>
-    <string name="chat_with_friends_login">Chat with friends.</string>
+    <string name="chat_with_friends_login">Chat with friends</string>
     <string name="friends_in_chat">Friends in Chat</string>
     <string name="chat_friend_in_chat">1 Friend in Chat</string>
     <string name="chats">Chats</string>
