--- a/SportsSideKick/app/src/main/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-de/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Pinnwand</string>
     <string name="news">News</string>
     <string name="rumours">Gerüchte</string>
+    <string name="social">SCP SOZIAL</string>
     <string name="stats">Statistik</string>
     <string name="shop">Shop</string>
     <string name="chat">Chat</string>
