--- a/SportsSideKick/app/src/main/res/values-es/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-es/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Muro</string>
     <string name="news">Noticias</string>
     <string name="rumours">Rumores</string>
+    <string name="social">SCP SOCIAL</string>
     <string name="stats">Estadísticas</string>
     <string name="shop">Tienda</string>
     <string name="chat">Chat</string>
