--- a/SportsSideKick/app/src/main/res/values-fr/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-fr/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Mur</string>
     <string name="news">Actualités</string>
     <string name="rumours">Rumeurs</string>
+    <string name="social">SCP RÉSEAUX SOCIAUX</string>
     <string name="stats">Stats</string>
     <string name="shop">Boutique</string>
     <string name="chat">Messagerie</string>
