--- a/SportsSideKick/app/src/main/res/values-id/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-id/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Dinding</string>
     <string name="news">Berita</string>
     <string name="rumours">Rumor</string>
+    <string name="social">SCP SOSIAL</string>
     <string name="stats">Stat</string>
     <string name="shop">Belanja</string>
     <string name="chat">Obrolan</string>
