--- a/SportsSideKick/app/src/main/res/values-it/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-it/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Bacheca</string>
     <string name="news">News</string>
     <string name="rumours">Voci di mercato</string>
+    <string name="social">SCP SOCIAL</string>
     <string name="stats">Statistiche</string>
     <string name="shop">Negozio</string>
     <string name="chat">Chat</string>
