--- a/SportsSideKick/app/src/main/res/values-pl/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pl/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Tablica</string>
     <string name="news">Wiadomości</string>
     <string name="rumours">Pogłoski</string>
+    <string name="social">SCP: SPOŁECZNOŚĆ</string>
     <string name="stats">Statystyki</string>
     <string name="shop">Sklep</string>
     <string name="chat">Czat</string>
