--- a/SportsSideKick/app/src/main/res/values-pt/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pt/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Mural</string>
     <string name="news">Notícias</string>
     <string name="rumours">Rumores</string>
+    <string name="social">SCP SOCIAL</string>
     <string name="stats">Estats</string>
     <string name="shop">Loja</string>
     <string name="chat">Chat</string>
