--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">Стена</string>
     <string name="news">Новости</string>
     <string name="rumours">Слухи</string>
+    <string name="social">SCP В СОЦ. СЕТЯХ</string>
     <string name="stats">Статистика</string>
     <string name="shop">Магазин</string>
     <string name="chat">Чат</string>
