--- a/SportsSideKick/app/src/main/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-zh/strings.xml
@@ -5,6 +5,7 @@
     <string name="wall">墙</string>
     <string name="news">新闻</string>
     <string name="rumours">传言</string>
+    <string name="social">SCP 社交</string>
     <string name="stats">统计</string>
     <string name="shop">商店</string>
     <string name="chat">聊天</string>
