--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="wall">Wall</string>
     <string name="news">News</string>
     <string name="rumours">Rumours</string>
-    <string name="social">Social</string>
+    <string name="social">SCP Social</string>
     <string name="stats">Stats</string>
     <string name="shop">Official Store</string>
     <string name="chat">Chat</string>
