localize tickets label

--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">محادثة فيديو</string>
     <string name="radio">قنوات البودكاست</string>
     <string name="tv">تلفاز النادي</string>
+    <string name="tickets">ٹکٹیں</string>
     <string name="store">المتجر</string>
     <string name="quiz">أحجية</string>
     <string name="fantasy">مضاربة</string>
