--- a/SportsSideKick/app/src/main/res/values-bh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-bh/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">ভিডিও চ্যাট</string>
     <string name="radio">ক্লাব রেডিও</string>
     <string name="tv">ক্লাব টিভি</string>
+    <string name="tickets">टिकट</string>
     <string name="store">সংরক্ষণ করুন</string>
     <string name="quiz">কুইজ</string>
     <string name="fantasy">কল্পনা</string>
