--- a/SportsSideKick/app/src/main/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-de/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Video-Chat</string>
     <string name="radio">Club Radio</string>
     <string name="tv">Club TV</string>
+    <string name="tickets">Tickets</string>
     <string name="store">Store</string>
     <string name="quiz">Quiz</string>
     <string name="fantasy">Fantasy</string>
