--- a/SportsSideKick/app/src/main/res/values-es/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-es/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Chat de vídeo</string>
     <string name="radio">Radio del club</string>
     <string name="tv">TV del club</string>
+    <string name="tickets">Entradas</string>
     <string name="store">Tienda</string>
     <string name="quiz">Trivia</string>
     <string name="fantasy">Fantasía</string>
