--- a/SportsSideKick/app/src/main/res/values-id/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-id/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Obrolan Video</string>
     <string name="radio">Radio Klub</string>
     <string name="tv">TV Klub</string>
+    <string name="tickets">Tiket</string>
     <string name="store">Toko</string>
     <string name="quiz">Kuis</string>
     <string name="fantasy">Fantasi</string>
