--- a/SportsSideKick/app/src/main/res/values-it/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-it/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Videochat</string>
     <string name="radio">Club Radio</string>
     <string name="tv">Club TV</string>
+    <string name="tickets">Biglietti</string>
     <string name="store">Negozio</string>
     <string name="quiz">Quiz</string>
     <string name="fantasy">Fantasport</string>
