--- a/SportsSideKick/app/src/main/res/values-pl/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pl/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Wideoczat</string>
     <string name="radio">Radio klubowe</string>
     <string name="tv">Telewizja klubowa</string>
+    <string name="tickets">Bilety</string>
     <string name="store">Sklep</string>
     <string name="quiz">Quiz</string>
     <string name="fantasy">Fantasy</string>
