--- a/SportsSideKick/app/src/main/res/values-pt/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pt/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Chat de Video</string>
     <string name="radio">Rádio do clube</string>
     <string name="tv">Sporting TV</string>
+    <string name="tickets">Bilhetes</string>
     <string name="store">Loja</string>
     <string name="quiz">Questionário</string>
     <string name="fantasy">Fantasia</string>
