--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Видеочат</string>
     <string name="radio">Клубное радио</string>
     <string name="tv">Клубное ТВ</string>
+    <string name="tickets">Билеты</string>
     <string name="store">Магазин</string>
     <string name="quiz">Тест</string>
     <string name="fantasy">Fantasy</string>
