--- a/SportsSideKick/app/src/main/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-zh/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">视频聊天</string>
     <string name="radio">俱乐部电台</string>
     <string name="tv">俱乐部电视</string>
+    <string name="tickets">SCP 社交</string>
     <string name="store">商店</string>
     <string name="quiz">迷题</string>
     <string name="fantasy">幻想</string>
