--- a/SportsSideKick/app/src/main/res/values-fr/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-fr/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Discussion vidéo</string>
     <string name="radio">Radio du club</string>
     <string name="tv">Chaîne du club</string>
+    <string name="tickets">Billets</string>
     <string name="store">Store</string>
     <string name="quiz">Quiz</string>
     <string name="fantasy">Fantasy</string>
